# trivial-bindings-DSL-usecase

./: .gitignore  README.md  trivial-bindings-DSL-usecase.cabal
src/: examplenonapi.c
src/MyLib/: TrivialCaseFFI.hsc
